[package]
name = "http_load_tester"
version = "0.1.0"
edition = "2024"
authors = ["Brian Obot <brianobot9@gmail.com>"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
ratatui = "0.30.0"
reqwest = "0.13.4"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
